RESOLVED FIXED274981
REGRESSION (279348@main): Flickr photos flash at wrong offset when paging through album
https://bugs.webkit.org/show_bug.cgi?id=274981
Summary REGRESSION (279348@main): Flickr photos flash at wrong offset when paging thr...
alan
Reported 2024-05-31 11:34:51 PDT
Attachments
Patch (13.11 KB, patch)
2024-05-31 12:35 PDT, alan
no flags
Patch (13.14 KB, patch)
2024-06-03 05:35 PDT, alan
no flags
[fast-cq]Patch (13.17 KB, patch)
2024-06-03 08:38 PDT, alan
no flags
alan
Comment 1 2024-05-31 12:35:13 PDT
Antti Koivisto
Comment 2 2024-06-03 02:01:41 PDT
Comment on attachment 471560 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=471560&action=review > Source/WebCore/rendering/RenderBlock.cpp:823 > - return (posChildNeedsLayout() || needsSimplifiedNormalFlowLayout()) && !normalChildNeedsLayout() && !selfNeedsLayout(); > + return (posChildNeedsLayout() || needsSimplifiedNormalFlowLayout()) && !normalChildNeedsLayout() && !outOfFlowChildNeedsStaticPositionLayout() && !selfNeedsLayout(); would be nice to split this up to read better > Source/WebCore/rendering/RenderElement.cpp:1210 > + // FIXME: Currently this dirty bit has a very limite useage but should be expanded to "limited usage"
alan
Comment 3 2024-06-03 05:35:14 PDT
alan
Comment 4 2024-06-03 08:38:46 PDT
Created attachment 471574 [details] [fast-cq]Patch
EWS
Comment 5 2024-06-03 11:05:44 PDT
Committed 279667@main (e444be2003c0): <https://commits.webkit.org/279667@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471574 [details].
Fujii Hironori
Comment 6 2024-06-04 04:26:22 PDT
Regressed: Bug 275103 – REGRESSION(279667@main): ASSERTION FAILED: posChildNeedsLayout() || selfNeedsLayout() || !parent() in WebCore::RenderElement::setOutOfFlowChildNeedsStaticPositionLayout()
Note You need to log in before you can comment on or make changes to this bug.