REGRESSION (279348@main): Flickr photos flash at wrong offset when paging through album https://bugs.webkit.org/show_bug.cgi?id=274981 <rdar://129005765>

Reviewed by Antti Koivisto.

Introduce a new bit that says "this container has an out-of-flow child which needs its static position computed".
Normally "normal child needs layout" would be sufficient but due to a (super useful) optimization in RenderObject::markContainingBlocksForLayout
we can't just set that bit on a parent only* (at least not _outside_ of layout).
This bit triggers normal layout on the parent which in turn sets the static position on this newly added out-of-flow box.

*
Setting this bit on parent only prevents any subsequent markings from being able to mark ancestor chain "normal child needs layout" all the way up.

* LayoutTests/fast/dynamic/out-of-flow-with-inflow-sibling-insert-expected.html: Added.
* LayoutTests/fast/dynamic/out-of-flow-with-inflow-sibling-insert.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::canPerformSimplifiedLayout const):
* Source/WebCore/rendering/RenderElement.cpp:
(WebCore::RenderElement::clearChildNeedsLayout):
(WebCore::RenderElement::setOutOfFlowChildNeedsStaticPositionLayout):
* Source/WebCore/rendering/RenderElement.h:
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::clearNeedsLayout):
(WebCore::RenderObject::outputRenderObject const):
* Source/WebCore/rendering/RenderObject.h:
(WebCore::RenderObject::outOfFlowChildNeedsStaticPositionLayout const):
(WebCore::RenderObject::setOutOfFlowChildNeedsStaticPositionLayoutBit):
* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::attachToRenderElementInternal):

Canonical link: https://commits.webkit.org/279667@main